ECL 9.8.2:
==========

* Bugs fixed:

 - The C inline expansion for sin, cos, and tan were wrong due to three
   recently introduced typos.


ECL 9.8.1:
==========

* Important notes:

 - The GMP library had to be patched to build with latest versions of GCC.
   Since our patch only covers the main header and there might be some corners
   left, it is recommended to build ECL against a better maintained version of
   the library, such as MPIR or the versions supplied by your operating system.

 - ECL now builds properly on a large number of platforms, including Windows
   with and without Microsoft compilers. However, not always are all the
   configuration options available or well supported. The fault is not always
   ECL's, but also the libraries it depends on. Some of these problems are
   detailed below, some are to be found. As a guide, the minimally supported
   flags for each platform are those use for the automated testing process
       http://ecls.sourceforge.net/logs.html

* Ports:

 - The Windows/MSVC port now boots also when built without support for Unicode.

 - The Windows/mingw32 port builds without threads. For multithreading, the
   user will have to build version 7.2-alpha2 of the garbage collector
   manually and build ECL with it.

 - The NetBSD port builds with default values using the garbage collector
   in the pkgsrc distribution.

 - The Solaris port (Intel and Sparc) now builds with the given libraries (GMP
   and Boehm).

* Compiler:

 - The compiler now understands FFI types :[u]int{8,16,32,64}-t.

 - The FFI code emitted to convert from a lisp type to :uint or :unsigned-int
   rejected bignum inputs, even if they were in the range from 0 to UINT_MAX.
   Similar problem with :int

* Visible changes:

 - New functions ecl_make_[u]int(), ecl_make_[u]long(), ecl_to_[u]int(),
   ecl_to_[u]long(), ecl_to_bool(), ecl_make_bool(), convert between C types
   and cl_object.
